ast/tests/snapshots/ast__lambda_with_no_parameters.snap
---
source: ast/tests/ast.rs
expression: parsed
---
(
    AstLambda {
        range: AstRange {
            start: AstPoint {
                line: 0,
                col: 0,
            },
            end: AstPoint {
                line: 0,
                col: 7,
            },
        },
        parameters: AstLambdaParameters {
            range: AstRange {
                start: AstPoint {
                    line: 0,
                    col: 0,
                },
                end: AstPoint {
                    line: 0,
                    col: 2,
                },
            },
            values: [],
        },
        rhs: Expr(
            Recursive(
                AstRecursiveExpression {
                    range: AstRange {
                        start: AstPoint {
                            line: 0,
                            col: 6,
                        },
                        end: AstPoint {
                            line: 0,
                            col: 7,
                        },
                    },
                    ident: Some(
                        Identifier(
                            AstIdentifier {
                                range: AstRange {
                                    start: AstPoint {
                                        line: 0,
                                        col: 6,
                                    },
                                    end: AstPoint {
                                        line: 0,
                                        col: 7,
                                    },
                                },
                                value: "a",
                            },
                        ),
                    ),
                    values: None,
                    operator: None,
                    instance_of: None,
                    next: None,
                },
            ),
        ),
    },
    4,
)
